src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/AvatarUrlInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class AvatarUrlInvalidException extends RuntimeException {
    public AvatarUrlInvalidException(String message) {
        super(message);
    }
}
